--- a/templates/compra.html
+++ b/templates/compra.html
@@ -4,7 +4,7 @@
     {% endblock title %}
 
     {% block graphs %}
-        <img class="intraday" src="{{ url_for('static', filename='images/intraday-compra.png') }}">
-        <img class="last-5-days" src="{{ url_for('static', filename='images/last5days-compra.png') }}">
-        <img class="last-30-days" src="{{ url_for('static', filename='images/last30days-compra.png') }}">
+        <img class="intraday" src="{{ url_for('static', filename='images/graphs/intraday-compra.png') }}">
+        <img class="last-5-days" src="{{ url_for('static', filename='images/graphs/last5days-compra.png') }}">
+        <img class="last-30-days" src="{{ url_for('static', filename='images/graphs/last30days-compra.png') }}">
     {% endblock graphs %}
