--- a/templates/venta.html
+++ b/templates/venta.html
@@ -4,7 +4,7 @@
     {% endblock title %}
 
     {% block graphs %}
-        <img class="intraday" src="{{ url_for('static', filename='images/graphs/intraday-venta.png') }}">
-        <img class="last-5-days" src="{{ url_for('static', filename='images/graphs/last5days-venta.png') }}">
-        <img class="last-30-days" src="{{ url_for('static', filename='images/graphs/last30days-venta.png') }}">
+        <img class="intraday" src="https://storage.googleapis.com/data-bucket-gft//DolarPeru_data/intraday-venta.png">
+        <img class="last-5-days" src="https://storage.googleapis.com/data-bucket-gft//DolarPeru_data/last5days-venta.png">
+        <img class="last-30-days" src="https://storage.googleapis.com/data-bucket-gft//DolarPeru_data/last30days-venta.png">
     {% endblock graphs %}
