--- a/templates/compra.html
+++ b/templates/compra.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
     {% block title %}
-        Valor de Compra del <span>Dólar</span>
+        Tipo de Cambio <span>Compra</span>
     {% endblock title %}
 
     {% block graphs %}
