--- a/templates/venta.html
+++ b/templates/venta.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
     {% block title %}
-        Valor de Venta del <span>Dólar</span>
+        Tipo de Cambio <span>Venta</span>
     {% endblock title %}
 
     {% block graphs %}
