Added median, mejor. Changes in layout.

--- a/static/style.scss
+++ b/static/style.scss
@@ -91,7 +91,7 @@ main {
             float: left;
         }
 
-        .casas {
+        .consultas {
             width: 25%;
             float: left;
         }
