--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tipo de Cambio</title>
     <link rel="stylesheet" href="/static/style.css">
+    <script data-ad-client="ca-pub-8132848928781952" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
     <div class="container">
