--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,8 @@
     <title>Tipo de Cambio</title>
     <link rel="stylesheet" href="/static/style.css">
     <script data-ad-client="ca-pub-8132848928781952" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8132848928781952"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
