--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,7 @@
     <meta name="propeller" content="ab15b4518b1b87c51f8d202f5137a345">
 </head>
 <body>
+    <script async="async" data-cfasync="false" src="//upgulpinon.com/1?z=4423552"></script>
     <div class="container">
     
     <header>
