Added Banner Ad

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,7 @@
     <div class="container">
     
     <header>
+    <script type="text/javascript" src="//inpage-push.com/400/4424167" data-cfasync="false" async="async"></script>
     Dólar<span>Perú</span>
     </header>
     
