--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tipo de Cambio</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/layout-style.css">
 </head>
 <body>
     <script async="async" data-cfasync="false" src="//upgulpinon.com/1?z=4423552"></script>
@@ -81,10 +81,9 @@
             </div>
         </div>
     </main>
-
     <footer>
-        Derechos Reservados: GFT 2021
-
+        <div class="contact">contacto: gabriel@dolarpe.com</div>
+        <div class="derechos">Derechos Reservados (2021)</div>
     </footer>
 
 </div>
