--- a/templates/stats.html
+++ b/templates/stats.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tipo de Cambio</title>
+    <title>Tipo de Cambio - Estadísticas</title>
     <link rel="stylesheet" href="/static/stats-style.css">
 </head>
+
 <body>
     Estadísticas
     Meta: {{meta}}
@@ -14,4 +16,5 @@
     <br>
     Results: {{results}}
 </body>
+
 </html>
