--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,8 +31,8 @@
             {% block title %}{% endblock title %}
         </div>
         <div class="actualizado">
-            Actualizado: {{ head.time }}
-            [{{ head.date }}]
+            Actualizado: {{ head.hora }}
+            [{{ head.fecha }}]
         </div>
         <div class="resumen">
             <div class="promedio">
