--- a/templates/stats.html
+++ b/templates/stats.html
@@ -1,20 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tipo de Cambio - Estadísticas</title>
-    <link rel="stylesheet" href="/static/stats-style.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Tipo de Cambio - Estadísticas</title>
+        <link rel="stylesheet" href="/static/stats-style.css">
+    </head>
 
-<body>
-    Estadísticas
-    Meta: {{meta}}
-    <br>
-    <br>
-    Results: {{results}}
-</body>
+    <body>
+        Estadísticas
+        Hora: {{meta.time}}
+        Fecha: {{meta.date}}
+        <br>
+        <br>
+        {{scraper_results.latest}}
+        <table class="table_scraper_results">
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Success</th>
+                {% for d in range(-1, -activity.scraper_count-1, -1) %}
+                <th class="KE">{{d}}</th>
+                {%endfor%}
+            </tr>
+            {% for fintech in scraper_results %}
+            <tr>
+                <td>{{fintech.id}}</td>
+                <td>{{fintech.name}}</td>
+                <td>{{fintech.success}}</td>
+                {% for d in fintech.latest %}
+                <td>{{d}}</td>
+                {%endfor%}
+            </tr>
+            {% endfor %}
+
+        </table>
+
+
+
+
+    </body>
 
 </html>
