--- a/static/layout-style.scss
+++ b/static/layout-style.scss
@@ -178,6 +178,7 @@ main {
                 padding-right: 20px;
                 
                 a {
+                    color: black;
                     text-decoration: none;  
                 }
             }
@@ -190,6 +191,7 @@ main {
             padding-right: 20px;
             padding-bottom: 10px;
             text-align: left;
+            text-decoration: none;
             
             .quotes-right {
                 height: 30px;
@@ -199,6 +201,11 @@ main {
                 line-height: 30px;
                 text-align: left;
                 padding-left: 20px;
+
+                a {
+                    color: black;
+                    text-decoration: none;
+                } 
             }
         }
         
