--- a/static/stats-style.scss
+++ b/static/stats-style.scss
@@ -5,16 +5,55 @@
 }
   
 body {
-    background-color: #F2F2F2;
+    background-color: #96d8e0;
     margin: 0;
     font-family: 'Poppins';
+
+    .title {
+        padding-top: 25px;
+        color: gray;
+        font-size: 35px;
+        font-weight: 800;
+        text-transform: uppercase;
+        margin-left: 10px;
+    }
+
+    .hora-fecha {
+        color: rgb(73, 54, 54);
+        font-size: 15px;
+        font-weight: 650;
+        margin-left: 10px;
+
+        span {
+            font-style: italic;
+        }
+    }
 }
 
 .table_scraper_results, th, td {
-    border: 1px solid black; 
+    margin-top: 15px;
+    background-color: rgb(238, 244, 245);
+    margin-left: 10px;
+    font-size: 10px;
+    border: 1px solid black;
+    border-collapse: collapse; 
     text-align: center;
+    white-space: nowrap;
+    font-weight: bold;
 
-    .KE {
-        width: 30px
+    .bad {
+        color: red;
+    }
+
+    .good {
+        color: green;
+    }
+
+    .symbol-header {
+        width: 15px;
+    }
+
+    .symbol-row {
+        color: blue;
     }
 }
