--- a/templates/fintech.html
+++ b/templates/fintech.html
@@ -1,141 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
-=======
 
->>>>>>> 8a0fb06432e22370b520b7288a0a75a15c1824e4
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-    <title>Tipo de Cambio</title>
-    <link rel="stylesheet" href="/static/fintech-style.css">
-</head>
-<body>
-    <header>
-        Dólar<span>Perú</span>
-    </header>
-    <div class="logo-container">
-        <img class="logos" src="{{ url_for('static', filename='images/'+datos.image) }}">
-        <div class="l1">{{datos.name}}</div>
-    </div>
-    <div class="ultima-container">
-        <div class="section-title">Última Cotización
-            <div class="line2">Timestamp: {{ultima.timestamp}}</div>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Tipo de Cambio</title>
+        <link rel="stylesheet" href="/static/fintech-style.css">
+    </head>
+
+    <body>
+        <header>
+            Dólar<span>Perú</span>
+        </header>
+        <div class="logo-container">
+            <img class="logos" src="{{ url_for('static', filename='images/'+datos.image) }}">
+            <div class="l1">{{datos.name}}</div>
         </div>
-        <div class="compraventa">
-            <div class="compra">
-                Compra <br>
-                {{ultima.compra}}
+        <div class="ultima-container">
+            <div class="section-title">Última Cotización
+                <div class="line2">Timestamp: {{ultima.timestamp}}</div>
             </div>
-            <div class="venta">
-                Venta <br>
-                {{ultima.venta}}
+            <div class="compraventa">
+                <div class="compra">
+                    Compra <br>
+                    {{ultima.compra}}
+                </div>
+                <div class="venta">
+                    Venta <br>
+                    {{ultima.venta}}
+                </div>
             </div>
         </div>
-    </div>
-    <div class="graficos">
+        <div class="graficos">
+            <!-- 
         <img class="intraday" src="https://storage.googleapis.com/data-bucket-gft//DolarPeru_data/intraday-compra.png">
         <img class="last-5-days" src="https://storage.googleapis.com/data-bucket-gft//DolarPeru_data/last5days-compra.png">
         <img class="last-30-days" src="https://storage.googleapis.com/data-bucket-gft//DolarPeru_data/last30days-compra.png">
-        <div class="title-intraday">Intradía</div>
-        <div class="title-last-5-days">Últimos 5 días</div>
-        <div class="title-last-30-days">Últimos 100 días</div>
-    </div>
-    <div class="datos-container">
-        <div class="section-title">Información General</div>
-        <table>
-            <tr>
-                <td class="left-col">Nombre Comercial</td>
-                <td class="right-col">{{datos.name}}</td>
-            </tr>
-            <tr>
-                <td class="left-col">RUC</td>
-                <td class="right-col">{{datos.ruc}}</td>
-            </tr>
-            <tr>
-                <td class="left-col">Contacto</td>
-                <td class="right-col">{{datos.contacto}}</td>
-            </tr>
-            <tr>
-                <td class="left-col">Registro SBS</td>
-                <td class="right-col">{{datos.registro_SBS}}</td>
-            </tr>
-            <tr>
-                <td class="left-col">Página Web</td>
-                <td class="right-col">{{datos.link}}</td>
-            </tr>
-            <tr>
-                <td class="left-col">Transferencias Inmediatas</td>
-                <td class="right-col">{{datos.inmediatos}}</td>
-            </tr>
-            <tr>
-                <td class="left-col">Transferencias Interbancarias</td>
-                <td class="right-col">{{datos.interbancario}}</td>
-            </tr>
-        </table>
-    </div>
-    <div class="historicas">
-        <div class="section-title">
-            Cotizaciones Históricas
+        -->
+            <img class="intraday" src="{{ url_for('static', filename='graphs/graph-'+id+'-venta-intraday.png') }}">
+            <img class="last-5-days" src="{{ url_for('static', filename='graphs/graph-'+id+'-venta-7days.png') }}">
+            <img class="last-30-days" src="{{ url_for('static', filename='graphs/graph-'+id+'-venta-100days.png') }}">
+            <div class="title-intraday">Intradía</div>
+            <div class="title-last-5-days">Semana Pasada</div>
+            <div class="title-last-30-days">Últimos 100 días</div>
         </div>
-        <table class="tabla">
-            <tr>
-                <th>Fecha</th>
-                <th>Hora</th>
-                <th>Compra</th>
-                <th>Venta</th>
-            </tr>
-            {% for quote in antiguas %}
-            <tr>
-                <td>fecha</td>
-                <td>hora</td>
-                <td>{{quote.compra}}</td>
-                <td>{{quote.venta}}</td>
-            </tr>
-            {%endfor%}
-        </table>
-    </div>
-    
-</body>
+        <div class="datos-container">
+            <div class="section-title">Información General</div>
+            <table>
+                <tr>
+                    <td class="left-col">Nombre Comercial</td>
+                    <td class="right-col">{{datos.name}}</td>
+                </tr>
+                <tr>
+                    <td class="left-col">RUC</td>
+                    <td class="right-col">{{datos.ruc}}</td>
+                </tr>
+                <tr>
+                    <td class="left-col">Contacto</td>
+                    <td class="right-col">{{datos.contacto}}</td>
+                </tr>
+                <tr>
+                    <td class="left-col">Registro SBS</td>
+                    <td class="right-col">{{datos.registro_SBS}}</td>
+                </tr>
+                <tr>
+                    <td class="left-col">Página Web</td>
+                    <td class="right-col">{{datos.link}}</td>
+                </tr>
+                <tr>
+                    <td class="left-col">Transferencias Inmediatas</td>
+                    <td class="right-col">{{datos.inmediatos}}</td>
+                </tr>
+                <tr>
+                    <td class="left-col">Transferencias Interbancarias</td>
+                    <td class="right-col">{{datos.interbancario}}</td>
+                </tr>
+            </table>
+        </div>
+        <div class="historicas">
+            <div class="section-title">
+                Cotizaciones Históricas
+            </div>
+            <table class="tabla">
+                <tr>
+                    <th>Fecha</th>
+                    <th>Hora</th>
+                    <th>Compra</th>
+                    <th>Venta</th>
+                </tr>
+                {% for quote in antiguas %}
+                <tr>
+                    <td>fecha</td>
+                    <td>hora</td>
+                    <td>{{quote.compra}}</td>
+                    <td>{{quote.venta}}</td>
+                </tr>
+                {%endfor%}
+            </table>
+        </div>
+
+    </body>
+
 </html>
-
-=======
-    <title>Tipo de Cambio - Detalle</title>
-    <link rel="stylesheet" href="/static/fintech-style.css">
-</head>
-
-<body>
-    <a href={{ datos.name }} target="_blank">
-        <img class="logos" src="{{ url_for('static', filename='images/'+datos.image) }}">
-    </a>
-    Más Reciente:
-    Compra: {{ultima.compra}}</td>
-    Venta: {{ultima.venta}}</td>
-    Actualizado: {{ultima.time}} [{{ultima.date}}]</td>
-    <table>
-        <tr>
-            <th>Compra</th>
-            <th>Venta</th>
-            <th>Actualizado</th>
-        </tr>
-        {% for cot in antiguas%}
-        <tr>
-            <td>{{cot.compra}}</td>
-            <td>{{cot.venta}}</td>
-            <td>{{cot.time}} [{{cot.date}}]</td>
-        </tr>
-        {%endfor%}
-    </table>
-    <a href={{ datos.name }} target="_blank">
-        <img class="logos" src="{{ url_for('static', filename='images/'+datos.image) }}">
-    </a>
-    <a href={{ datos.name }} target="_blank">
-        <img class="logos" src="{{ url_for('static', filename='images/'+datos.image) }}">
-    </a>
-
-</body>
-
-</html>
->>>>>>> 8a0fb06432e22370b520b7288a0a75a15c1824e4
