--- a/templates/stats.html
+++ b/templates/stats.html
@@ -7,31 +7,28 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tipo de Cambio - Estadísticas</title>
         <link rel="stylesheet" href="/static/stats-style.css">
+        <meta http-equiv="refresh" content="450">
     </head>
 
     <body>
-        Estadísticas
-        Hora: {{meta.time}}
-        Fecha: {{meta.date}}
-        <br>
-        <br>
-        {{scraper_results.latest}}
+        <div class="title">Panel de Control</div>
+        <div class="hora-fecha">Más Reciente <span>stats.json</span> --> Hora: {{meta.time}} Fecha: {{meta.date}}</div>
         <table class="table_scraper_results">
             <tr>
                 <th>ID</th>
                 <th>Name</th>
                 <th>Success</th>
                 {% for d in range(-1, -activity.scraper_count-1, -1) %}
-                <th class="KE">{{d}}</th>
+                <th class="symbol-header">{{d}}</th>
                 {%endfor%}
             </tr>
             {% for fintech in scraper_results %}
             <tr>
                 <td>{{fintech.id}}</td>
-                <td>{{fintech.name}}</td>
-                <td>{{fintech.success}}</td>
+                <td class={{fintech.color}}>{{fintech.name}}</td>
+                <td class={{fintech.color}}>{{fintech.success}}</td>
                 {% for d in fintech.latest %}
-                <td>{{d}}</td>
+                <td class="symbol-row">{{d}}</td>
                 {%endfor%}
             </tr>
             {% endfor %}
