--- a/static/layout-style.css
+++ b/static/layout-style.css
@@ -176,6 +176,7 @@ main .main-info .quote-box-left .quotes-left {
 }
 
 main .main-info .quote-box-left .quotes-left a {
+  color: black;
   text-decoration: none;
 }
 
@@ -186,6 +187,7 @@ main .main-info .quote-box-right {
   padding-right: 20px;
   padding-bottom: 10px;
   text-align: left;
+  text-decoration: none;
 }
 
 main .main-info .quote-box-right .quotes-right {
@@ -196,6 +198,11 @@ main .main-info .quote-box-right .quotes-right {
   line-height: 30px;
   text-align: left;
   padding-left: 20px;
+}
+
+main .main-info .quote-box-right .quotes-right a {
+  color: black;
+  text-decoration: none;
 }
 
 main .main-info .logos {
