--- a/static/stats-style.css
+++ b/static/stats-style.css
@@ -4,223 +4,56 @@
 }
 
 body {
-  background-color: #F2F2F2;
+  background-color: #96d8e0;
   margin: 0;
   font-family: 'Poppins';
 }
 
-.container {
-  background-color: #F2F2F2;
-  width: 1024px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-header {
-  font-size: 40px;
-  font-weight: 700;
-  margin-top: 5px;
-  padding-top: 10px;
-}
-
-header span {
-  color: var(--primary-color);
-}
-
-nav {
-  background-color: lightgray;
-  text-align: center;
-  padding-top: 6px;
-  padding-bottom: 6px;
-  border-radius: 25px;
-}
-
-nav a {
-  color: var(--primary-color);
-  font-size: 20px;
-  font-weight: 600;
-  text-decoration: none;
-  padding-left: 45px;
-  padding-right: 45px;
-}
-
-main {
-  text-align: center;
-}
-
-main .title {
+body .title {
   padding-top: 25px;
   color: gray;
   font-size: 35px;
   font-weight: 800;
   text-transform: uppercase;
+  margin-left: 10px;
 }
 
-main .title span {
+body .hora-fecha {
+  color: #493636;
+  font-size: 15px;
+  font-weight: 650;
+  margin-left: 10px;
+}
+
+body .hora-fecha span {
+  font-style: italic;
+}
+
+.table_scraper_results, th, td {
+  margin-top: 15px;
+  background-color: #eef4f5;
+  margin-left: 10px;
+  font-size: 10px;
+  border: 1px solid black;
+  border-collapse: collapse;
+  text-align: center;
+  white-space: nowrap;
+  font-weight: bold;
+}
+
+.table_scraper_results .bad, th .bad, td .bad {
+  color: red;
+}
+
+.table_scraper_results .good, th .good, td .good {
   color: green;
 }
 
-main .actualizado {
-  margin-top: -10px;
-  color: gray;
-  font-size: 15px;
-  font-weight: 700;
+.table_scraper_results .symbol-header, th .symbol-header, td .symbol-header {
+  width: 15px;
 }
 
-main .resumen {
-  color: black;
-  background-color: #dfe3e7;
-  padding-top: 8px;
-  padding-bottom: 80px;
-  font-size: 25px;
-  font-weight: 700;
-}
-
-main .resumen .promedio {
-  width: 25%;
-  float: left;
-}
-
-main .resumen .mediano {
-  width: 25%;
-  float: left;
-}
-
-main .resumen .mejor {
-  width: 25%;
-  float: left;
-}
-
-main .resumen .consultas {
-  width: 25%;
-  float: left;
-}
-
-main .graphs {
-  background-color: #daebec;
-  text-align: left;
-  padding-bottom: 35px;
-  margin-bottom: 0px;
-}
-
-main .graphs .intraday {
-  padding-left: 25px;
-  padding-right: 20px;
-  padding-top: 15px;
-  padding-bottom: 10px;
-  height: 180px;
-  width: 280px;
-}
-
-main .graphs .last-5-days {
-  padding-left: 25px;
-  padding-right: 20px;
-  padding-top: 15px;
-  padding-bottom: 10px;
-  height: 180px;
-  width: 280px;
-}
-
-main .graphs .last-30-days {
-  padding-left: 25px;
-  padding-right: 10px;
-  padding-top: 15px;
-  padding-bottom: 10px;
-  height: 180px;
-}
-
-main .graphs .title-intraday {
-  font-weight: bold;
-  width: 33%;
-  float: left;
-  text-align: center;
-}
-
-main .graphs .title-last-5-days {
-  font-weight: bold;
-  width: 33%;
-  float: left;
-  text-align: center;
-}
-
-main .graphs .title-last-30-days {
-  font-weight: bold;
-  width: 33%;
-  float: left;
-  text-align: center;
-}
-
-main .main-info {
-  background-color: #dfe3e7;
-  text-decoration: none;
-}
-
-main .main-info .quote-box-left {
-  width: 480px;
-  padding-top: 10px;
-  padding-left: 20px;
-  padding-bottom: 10px;
-  text-align: left;
-  float: left;
-  text-decoration: none;
-}
-
-main .main-info .quote-box-left .quotes-left {
-  height: 30px;
-  color: black;
-  font-size: 25px;
-  font-weight: bold;
-  line-height: 30px;
-  text-align: right;
-  padding-right: 20px;
-}
-
-main .main-info .quote-box-left .quotes-left a {
-  text-decoration: none;
-}
-
-main .main-info .quote-box-right {
-  margin-left: 502px;
-  width: 480px;
-  padding-top: 10px;
-  padding-right: 20px;
-  padding-bottom: 10px;
-  text-align: left;
-}
-
-main .main-info .quote-box-right .quotes-right {
-  height: 30px;
-  color: black;
-  font-size: 25px;
-  font-weight: bold;
-  line-height: 30px;
-  text-align: left;
-  padding-left: 20px;
-}
-
-main .main-info .logos {
-  height: 30px;
-  padding-right: 30px;
-  padding-left: 30px;
-}
-
-footer {
-  background-color: yellowgreen;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  font-size: 10px;
-  padding-right: 5px;
-}
-
-footer .contact {
-  padding-left: 25px;
-  text-align: left;
-  font-weight: bolder;
-  float: left;
-}
-
-footer .derechos {
-  padding-right: 25px;
-  text-align: right;
+.table_scraper_results .symbol-row, th .symbol-row, td .symbol-row {
+  color: blue;
 }
 /*# sourceMappingURL=stats-style.css.map */
