--- a/templates/layout.html
+++ b/templates/layout.html
@@ -59,8 +59,8 @@
                 <div class="graphs">
                     {% block graphs %}{% endblock graphs %}
                     <div class="title-intraday">Intradía</div>
-                    <div class="title-last-5-days">Últimos 5 días</div>
-                    <div class="title-last-30-days">Últimos 30 días</div>
+                    <div class="title-last-5-days">Última Semana</div>
+                    <div class="title-last-30-days">Últimos 100 días</div>
                 </div>
                 <div class="main-info">
                     <div class="quote-box-left">
