--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,6 +23,7 @@
             <nav>
                 <a href="/compra">Compra</a>
                 <a href="/venta">Venta</a>
+                <a href="/acercade">Acerca</a>
                 <!-- Suspended
         <a href="#">Canales Oficiales</a>
         <a href="#">Noticias</a>
