--- a/static/fintech-style.css
+++ b/static/fintech-style.css
@@ -38,20 +38,6 @@ body nav a {
   padding-right: 45px;
 }
 
-body .section-title {
-  background-color: lightgray;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  text-align: center;
-  font-size: 20px;
-  font-weight: 700;
-}
-
-body .section-title .line2 {
-  font-size: 15px;
-  font-weight: 600;
-}
-
 body .logo-container {
   text-align: center;
 }
@@ -63,16 +49,28 @@ body .logo-container .logos {
   padding: 5px 5px 5px 5px;
 }
 
-body .logo-container .l1 {
+body .ultima-container {
+  background-color: #dfe3e7;
+  padding-bottom: 45px;
+  text-align: center;
+}
+
+body .ultima-container .l1 {
+  background-color: lightgray;
   font-size: 35px;
   font-weight: 800;
   text-transform: uppercase;
 }
 
-body .ultima-container {
-  background-color: #dfe3e7;
-  padding-bottom: 80px;
-  text-align: center;
+body .ultima-container .subtitle {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+body .ultima-container .line2 {
+  color: grey;
+  font-size: 15px;
+  font-weight: 600;
 }
 
 body .ultima-container .compraventa {
@@ -92,97 +90,146 @@ body .ultima-container .compraventa .venta {
   float: left;
 }
 
-body .graficos {
+body .graficos-compra {
   background-color: #daebec;
   text-align: left;
-  padding-bottom: 35px;
+  padding-bottom: 0px;
   margin-bottom: 0px;
 }
 
-body .intraday {
+body .graficos-compra .intraday {
   padding-left: 25px;
   padding-right: 20px;
   padding-top: 15px;
-  padding-bottom: 10px;
+  padding-bottom: 12px;
   width: 280px;
 }
 
-body .last-5-days {
+body .graficos-compra .last-7-days {
   padding-left: 25px;
   padding-right: 20px;
   padding-top: 15px;
-  padding-bottom: 10px;
+  padding-bottom: 12px;
   width: 280px;
 }
 
-body .last-30-days {
+body .graficos-compra .last-100-days {
   padding-left: 25px;
   padding-right: 10px;
-  padding-top: 15px;
+  padding-top: 10px;
   padding-bottom: 10px;
   width: 280px;
 }
 
-body .title-intraday {
+body .graficos-compra .title-intraday {
   font-weight: bold;
   width: 33%;
   float: left;
   text-align: center;
 }
 
-body .title-last-5-days {
+body .graficos-compra .title-last-7-days {
   font-weight: bold;
   width: 33%;
   float: left;
   text-align: center;
 }
 
-body .title-last-30-days {
+body .graficos-compra .title-last-100-days {
   font-weight: bold;
   width: 33%;
   float: left;
   text-align: center;
 }
 
-.datos-container {
+body .graficos-venta {
+  background-color: #daebec;
+  text-align: left;
+  padding-bottom: 15px;
+  margin-bottom: 0px;
+}
+
+body .graficos-venta .intraday {
+  padding-left: 25px;
+  padding-right: 20px;
+  padding-top: 0px;
+  padding-bottom: 10px;
+  width: 280px;
+}
+
+body .graficos-venta .last-7-days {
+  padding-left: 25px;
+  padding-right: 20px;
+  padding-top: 0px;
+  padding-bottom: 10px;
+  width: 280px;
+}
+
+body .graficos-venta .last-100-days {
+  padding-left: 25px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 280px;
+}
+
+body .datos-container {
   margin-top: 0px;
   background-color: #dfe3e7;
 }
 
-.datos-container table {
+body .datos-container .section-title {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  background-color: lightgray;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+body .datos-container table {
   width: 100%;
 }
 
-.datos-container table .left-col {
+body .datos-container table .left-col {
   font-weight: 600;
   text-align: right;
   padding-right: 5px;
 }
 
-.datos-container table .right-col {
+body .datos-container table .right-col {
   font-weight: 450;
   text-align: left;
   padding-left: 5px;
 }
 
-.historicas .tabla {
+body .historicas .section-title {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  background-color: lightgray;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+body .historicas .tabla {
   margin-top: 10px;
   width: 100%;
   border-collapse: collapse;
   text-align: center;
 }
 
-.historicas .tabla th, .historicas .tabla td {
+body .historicas .tabla th, body .historicas .tabla td {
   padding: 3px;
   border-bottom: 1px solid #ddd;
 }
 
-.historicas .tabla tr:nth-child(even) {
+body .historicas .tabla tr:nth-child(even) {
   background-color: blue;
   color: white;
 }
 
-.historicas .tabla tr:nth-child(odd) {
+body .historicas .tabla tr:nth-child(odd) {
   background-color: white;
   color: blue;
 }
