changed to adcash

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,19 +5,19 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tipo de Cambio</title>
+        <title>dolarpe.com</title>
         <link rel="stylesheet" href="/static/layout-style.css">
         <meta http-equiv="refresh" content="450">
-        <script async
-            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5934459102093169"
-            crossorigin="anonymous"></script>
+        <meta name="a.validate.01" content="8807a919b0089ba5d7fbbb58155dd71b2a73" />
     </head>
 
     <body>
         <div class="container">
 
             <header>
-                Dólar<span>Perú</span>
+                <a href="https://dolarpe.com">
+                    Dólar<span>Perú</span>
+                </a>
             </header>
 
             <nav>
