--- a/static/layout-style.css
+++ b/static/layout-style.css
@@ -23,6 +23,11 @@ header {
   padding-top: 10px;
 }
 
+header a {
+  text-decoration: none;
+  color: black;
+}
+
 header span {
   color: var(--primary-color);
 }
