--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,7 @@
     </head>
 
     <body>
+        <script type="text/javascript" data-adel="atag" src="//acscdn.com/script/atg.js" czid="cuinq1qa"></script>
         <div class="container">
 
             <header>
