added new fields to fintech json

--- a/templates/fintech.html
+++ b/templates/fintech.html
@@ -56,16 +56,21 @@
                     <td class="right-col">{{datos.name}}</td>
                 </tr>
                 <tr>
+                    <td class="left-col">Marketing</td>
+                    <td class="right-col">{{datos.texto_libre}}</td>
+                </tr>
+                <tr>
                     <td class="left-col">RUC</td>
                     <td class="right-col">{{datos.ruc}}</td>
                 </tr>
                 <tr>
-                    <td class="left-col">Contacto</td>
-                    <td class="right-col">{{datos.contacto}}</td>
-                </tr>
-                <tr>
                     <td class="left-col">Registro SBS</td>
                     <td class="right-col">{{datos.registro_SBS}}</td>
+                </tr>
+                <tr>
+                    <td class="left-col">Contacto</td>
+                    <td class="right-col">{{datos.contacto_correo}</td>
+                    <td class="right-col">{{datos.contacto_telefono}}</td>
                 </tr>
                 <tr>
                     <td class="left-col">Página Web</td>
@@ -73,11 +78,28 @@
                 </tr>
                 <tr>
                     <td class="left-col">Transferencias Inmediatas</td>
-                    <td class="right-col">{{datos.inmediatos}}</td>
+                    <td class="right-col">{{datos.bancos_inmediato}}</td>
                 </tr>
                 <tr>
                     <td class="left-col">Transferencias Interbancarias</td>
-                    <td class="right-col">{{datos.interbancario}}</td>
+                    <td class="right-col">{{datos.bancos_interbancario}}</td>
+                </tr>
+                <tr>
+                    <td class="left-col">Horario</td>
+                    <td class="right-col">{{datos.horario}}</td>
+                </tr>
+                <tr>
+                    <td class="left-col">Apps</td>
+                    <td class="right-col">{{datos.app_iOS}}</td>
+                    <td class="right-col">{{datos.app_Android}}</td>
+                </tr>
+                <tr>
+                    <td class="left-col">Redes Sociales</td>
+                    <td class="right-col">{{datos.facebook}}</td>
+                    <td class="right-col">{{datos.twitter}}</td>
+                    <td class="right-col">{{datos.instagram}}</td>
+                    <td class="right-col">{{datos.linkedin}}</td>
+                    <td class="right-col">{{datos.youtube}}</td>
                 </tr>
             </table>
         </div>
